# marketplace_blog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: pre-commit.yml
src/: config.py  main.py
src/associations/: models.py
src/auth/: backend.py  routers.py  schemas.py  service.py
src/backend/: db.py  db_depends.py
src/categories/: backend.py  models.py  repository.py  routers.py  schemas.py  service.py
src/migrations/: env.py
src/migrations/versions/: 2c5ab49fcaa4_init_migrations.py  664f3728e29c_init_migrations.py  f6c3e6054887_add_sequence_into_categories_id.py
src/posts/: backend.py  chemas.py  models.py  repository.py  routers.py  schemas.py  service.py  utils.py
src/settings/: config.py
src/users/: models.py  repository.py  routers.py  schemas.py  service.py
tests/: conftest.py  test_authenticate_user.py  test_create_category.py  test_create_post.py  test_create_user.py  test_delete_post.py  test_get_categories.py  test_get_post.py  test_update_post.py
tests/test_users/: test_create_user.py  test_user_repository_create_user.py
