[project]
name = "mp-blog"
version = "0.1.0"
description = ""
authors = [
    { name = "Lev Patskevich", email = "lion.patskevich@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "boto3 (>=1.37.23,<2.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "gevent (>=25.4.1,<26.0.0)",
    "pydantic-settings (>=2.9.0,<3.0.0)",
    "faststream[cli] (>=0.5.39,<0.6.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
select = ["E", "F", "W", "UP", "I"]
ignore = ["E402"]
exclude = ["src/migrations/**"]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
task-tags = ["TODO", "FIXME", "XXX"]
dummy-variable-rgx = "^_+$"